Updated photos on secretariat page
Updated the nopicture photos to the respective photos. Need Miksa, Seojin, Daniel and Yi Xin's photos.

--- a/Conference.html
+++ b/Conference.html
@@ -102,7 +102,7 @@
                                                             <div class=" col-md-4 col-sm-6 item JACKEL">
                                                             <center>
                                                             	<h1  class="nino-serviceTitle">Secretary-General</h1>
-                                                                <img class="demo imgbtn" onclick="currentDiv(3)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+                                                                <img class="demo imgbtn" onclick="currentDiv(3)" src="images/ConferencePg/FinalKevin.jpg" height=165px width=165px>
 																</center>
 															</div>
 
@@ -113,7 +113,7 @@
 
                                                            <center>
 															   <h1 class="nino-serviceTitle">Secretary-General</h1>
-															   <img class="demo imgbtn" onclick="currentDiv(4)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+															   <img class="demo imgbtn" onclick="currentDiv(4)" src="images/ConferencePg/FinalJennifer.jpg" height=165px width=165px>
 															   </center>
 															</div>
 
@@ -122,7 +122,7 @@
 							    <div class="col-md-4 col-sm-6 item ">
                                                                 <center>
                                                                 <h1 class="nino-serviceTitle">Secretary-General Emeritus: </h1>
-                                                                <img class="demo imgbtn" onclick="currentDiv(2)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+                                                                <img class="demo imgbtn" onclick="currentDiv(2)" src="images/ConferencePg/Jack.jpg" height=165px width=165px>
                                                                 </center>
                                                             </div>
 
@@ -161,28 +161,28 @@
                                                             <div class="col-md-4 col-sm-6 item ">
                                                                 <center>
                                                                 <h1 class="nino-serviceTitle">Head of Tech</h1>
-                                                                <img class="demo imgbtn" onclick="currentDiv(9)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+                                                                <img class="demo imgbtn" onclick="currentDiv(9)" src="images/ConferencePg/FinalMark.jpg" height=165px width=165px>
                                                                 </center>
                                                             </div>
 
 							<div class="col-md-4 col-sm-6 item ">
                                                                <center>
                                                                 <h1 class="nino-serviceTitle">Deputy-Head of Admin</h1>
-                                                                <img class="demo imgbtn" onclick="currentDiv(10)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+                                                                <img class="demo imgbtn" onclick="currentDiv(10)" src="images/ConferencePg/FinalAndrew.jpg" height=165px width=165px>
 																</center>
                                                             </div>
 
                                                             <div class="col-md-4 col-sm-6 item ">
                                                               <center>
                                                                <h1 class="nino-serviceTitle">Deputy-Head Of Press</h1>
-                                                                <img class="demo imgbtn" onclick="currentDiv(11)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+                                                                <img class="demo imgbtn" onclick="currentDiv(11)" src="images/ConferencePg/FinalAdelle.JPG" height=165px width=165px>
 																</center>
                                                             </div>
 
                                                             <div class="col-md-4 col-sm-6 item ">
                                                                 <center>
                                                                 <h1 class="nino-serviceTitle">Deputy-Head of Tech</h1>
-                                                                <img class="demo imgbtn" onclick="currentDiv(12)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+                                                                <img class="demo imgbtn" onclick="currentDiv(12)" src="images/ConferencePg/FinalJinho.jpg" height=165px width=165px>
                                                                 </center>
                                                             </div>	
 							
@@ -197,7 +197,7 @@
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/Jack.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Esteemed directors, honourable chairs and respected delegates,
@@ -223,7 +223,7 @@ Since I entered the MUN community four years ago, I have been to numerous confer
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/FinalJennifer.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
                                                                                     <p class="quote" ><br><br>Esteemed directors, honourable chairs and respected delegates, <br><br>
@@ -245,7 +245,7 @@ Welcome to DIMUN IX! I am delighted to serve this conference as your Secretary-G
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/FinalKevin.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honourable Directors, Delegates and Chairs.
@@ -369,7 +369,7 @@ The Press Team will be producing three issues of DIMUNITE, an annual DIMUN magaz
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/FinalMark.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests,<br><br>
@@ -393,7 +393,7 @@ My deputy Jinho and I along with many more will maintain the DIMUN website and c
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/FinalAndrew.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
@@ -418,7 +418,7 @@ Alongside my deputy, Jeffrey Liang, and the rest of the Admin Team, I will do ev
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/FinalAdelle.JPG" alt="">
                                                                                 </div>
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honourable delegates, directors and chairs, welcome to DIMUN IX! 
@@ -440,7 +440,7 @@ My name is Adelle Yan and it is my pleasure to serve as your Deputy Head of Pres
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/FinalJinho.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
 										<p class="quote"><br><br>Esteemed directors, honourable chairs and respected delegates,
