Uploaded Yi Xin's intro

--- a/Conference.html
+++ b/Conference.html
@@ -275,9 +275,12 @@ This said, I look forward to seeing fruitful debate, diplomatic resolutions and 
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-                                                                                    <p class="quote"><br><br>Esteemed directors, student officers, delegates, and guests, <br><br>
-I am currently attending Year 11 at Dulwich College Beijing and have been involved in MUN for over two years. From debating resolutions as a delegate, to running committees as a chair, and finally to overseeing DIMUN as a member of the core team, I have thoroughly treasured and appreciated every moment of my MUN experience. It is my honor to serve you as your Deputy Secretary-General for DIMUN VIII and I hope we can work together to create an enjoyable and productive conference.
-																					</p>
+                                                                                    <p class="quote"><br><br>Honorable student officers, fellow delegates, and most esteemed guests, <br><br>
+Welcome to DIMUN IX!
+<br><br>
+My name is Yi Xin Lee and I am incredibly honoured to be serving as your Deputy Secretary General for DIMUN IX. For the last three years or so, I have been an active part of the MUN community, from debating resolutions as a delegate, to running committees as a chair and now, overseeing DIMUN as a member of the core team. When I first started doing MUN in Year 9, I was in the Environment Commission and, like most new delegates, was terrified. Nevertheless, after doing multiple MUNs throughout the years, I have developed an incredibly drive for MUN — to any new delegates reading this, I hope to pass on this passion to you too! Hence, I strongly urge everyone to actively participate so that we can all work together to create an enjoyable and fruitful conference. 
+<br><br>
+</p>
                                                                                 </div>
                                                                             </div>
                                                                         </li>
