Updated with Andrew Luk's intro.
Ta da

--- a/Conference.html
+++ b/Conference.html
@@ -398,12 +398,10 @@ My deputy Jinho and I along with many more will maintain the DIMUN website and c
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/FinalAndrew.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-                                                                                    <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
+                                                                                    <p class="quote"><br><br>Esteemed directors, honourable chairs and respected delegates, 
 <br><br>
-it is an honour to be serving as your Head of Admin for this year’s DIMUN VIII conference. DIMUN is a place where great minds connect, great ideas flourish, and great memories are made. More importantly, DIMUN is a place where delegates learn more about what it means to be a citizen of the world.
- <br><br>
-Alongside my deputy, Jeffrey Liang, and the rest of the Admin Team, I will do everything I can to ensure that the conference runs as smoothly as possible. We hope to see you soon!
-																					</p>
+I am Andrew Luk and it is my absolute pleasure to serve as the Deputy Head of Admin for DIMUN IX. The admin team will be responsible for assisting delegates in a myriad of ways. Ensuring that the conference runs smoothly is another responsibility which will be upheld by our team of admin staff who will be more than happy to guide delegates. I wish the delegates the best of luck and I look forward to another year of diplomacy and constructive debating.
+</p>
                                                                                 </div>
                                                                             </div>
                                                                         </li>
