Updated daniel's intro

--- a/Conference.html
+++ b/Conference.html
@@ -300,9 +300,11 @@ My name is Yi Xin Lee and I am incredibly honoured to be serving as your Deputy 
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-                                                                                    <p class="quote"><br><br>Honourable directors and esteemed delegates,
+                                                                                    <p class="quote"><br><br>Honorable directors and esteemed delegates,
 <br><br>
-I am delighted to be part of the DIMUN VIII Student Executive Officer Team, and am honoured to be Secretary General of this year’s conference. Through my experiences in MUN, I have never failed to see the passion, diplomacy and enthusiasm of delegates. Whether they are debating or discussing in these conferences, I am eager to see the potential and skill that delegates have. It is indeed inspiring to see so many young people willing to tackle, resolve and have a further understanding of global issues. I look forward to meeting all the delegates, working with the directors, and be prepared to have a fruitful and meaningful conference.
+My name is Daniel Cai and it is my upmost pleasure to serve as your Conference Manager for DIMUN IX. Whether it is the upbeat and thrilling debating or the idea that flashed in your mind urging you to try something new that brings you to DIMUN, you can rest assured that we are here to bring you the best MUN conference you have yet experienced. DIMUN is not only a place where the smartest minds coincide, where delegates find the joy in competition and collaboration, where unforgettable friendships are made, but also a place where it marks our steps as a generation, where we witness change and progress and where we celebrate passion and enthusiasm for debate.
+<br><br>
+I wish you the best of luck and look forward to meeting you soon!
 </p>
 
                                                                                 </div>
