Edited Miksa's description.
Literally copied Ashley's from last year and edited to be "updated"

--- a/Conference.html
+++ b/Conference.html
@@ -317,7 +317,7 @@ I wish you the best of luck and look forward to meeting you soon!
 
                                                     <div class="mySlides w3-container" height="75%">
                                                         <button class="w3-button demo w3-black" onclick="currentDiv(1)">Back</button>
-                                                        <h2>Miksha Jordan: Head of Admin</h2>
+                                                        <h2>Miksa Jordan: Head of Admin</h2>
                                                         <div class="nino-testimonialSlider">
                                                                     <ul>
                                                                         <li>
@@ -328,9 +328,9 @@ I wish you the best of luck and look forward to meeting you soon!
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
 <br><br>
-it is an honour to be serving as your Head of Admin for this year’s DIMUN VIII conference. DIMUN is a place where great minds connect, great ideas flourish, and great memories are made. More importantly, DIMUN is a place where delegates learn more about what it means to be a citizen of the world.
+it is an honour to be serving as your Head of Admin for this year’s DIMUN IX conference. DIMUN is a place where great minds connect, great ideas flourish, and great memories are made. More importantly, DIMUN is a place where delegates learn more about what it means to be a citizen of the world.
  <br><br>
-Alongside my deputy, Jeffrey Liang, and the rest of the Admin Team, I will do everything I can to ensure that the conference runs as smoothly as possible. We hope to see you soon!
+Alongside my deputy, Andrew Luk, and the rest of the Admin Team, I will do everything I can to ensure that the conference runs as smoothly as possible. We hope to see you soon!
 																					</p>
                                                                                 </div>
                                                                             </div>
