Updated Miksa's intro

--- a/Conference.html
+++ b/Conference.html
@@ -328,7 +328,7 @@ I wish you the best of luck and look forward to meeting you soon!
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
 <br><br>
-it is an honour to be serving as your Head of Admin for this year’s DIMUN IX conference. DIMUN is a place where great minds connect, great ideas flourish, and great memories are made. More importantly, DIMUN is a place where delegates learn more about what it means to be a citizen of the world.
+It is an honour to be serving as your Head of Admin for this year’s DIMUN IX conference. DIMUN is a place where great minds connect, great ideas flourish, and great memories are made. More importantly, DIMUN is a place where delegates learn more about what it means to be a citizen of the world.
  <br><br>
 Alongside my deputy, Andrew Luk, and the rest of the Admin Team, I will do everything I can to ensure that the conference runs as smoothly as possible. We hope to see you soon!
 																					</p>
