Update to Miksa intro
wanted a semicolon.

--- a/Conference.html
+++ b/Conference.html
@@ -326,7 +326,7 @@ I wish you the best of luck and look forward to meeting you soon!
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-                                                                                    <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
+                                                                                    <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests:
 <br><br>
 It is an honour to be serving as your Head of Admin for this year’s DIMUN IX conference. DIMUN is a place where great minds connect, great ideas flourish, and great memories are made. More importantly, DIMUN is a place where delegates learn more about what it means to be a citizen of the world.
  <br><br>
