Removed table (hid it)

--- a/Directors.html
+++ b/Directors.html
@@ -133,7 +133,9 @@
 		<br><br>
 		Prior to the conference, delegates are required to research their assigned countries in order to represent them effectively in debate. They must also research their individual topics and prepare draft resolutions to be merged during lobbying. Delegates are also expected to be familiar with debate procedures, although committee Chairs will assist all delegates. Our Delegate Guide is available here and contains preparation and research guidelines, a sample resolution, the official DIMUN debate procedures and other relevant information.
 		<br><br><br><br>
-		<table class ="minimalistBlack" style="width: 100%;"  border="1" cellpadding="50">
+		<!---
+
+table class ="minimalistBlack" style="width: 100%;"  border="1" cellpadding="50">
 		<tbody>
 		<tr style="height: 23px;">
 		<td style="height: 23px;">&nbsp;15th September, 2017</td>
@@ -160,11 +162,11 @@
 		<td style="height: 23px;">Payment deadline</td>
 		</tr>
 		<tr style="height: 23px;">
-		<td style="height: 23px;">2nd March, 2018</td>
-		<td style="height: 23px;">DIMUN VIII Opens</td>
+		<td style="height: 23px;">1st March 2019</td>
+		<td style="height: 23px;">DIMUN IX Opens</td>
 		</tr>
 		</tbody>
-		</table>
+	    </table>--->
 		<br><br><br><br>
 	</h4>
     </center>
