--- a/Committees.html
+++ b/Committees.html
@@ -257,28 +257,28 @@
     <div class="container">
 		<h1>Theme: Beyond the Borders </h1>
 
-<h3>GA1: </h3>
+<h3>General Assembly 1: </h3>
 <p>Combating the spread of diseases in South-East Asia<br>
 Addressing the misconduct of UN peacekeepers<br>
 Improving access to clean water and medical infrastructure in Afghanistan<br>
 Ensuring voting security in transitional countries in the Balkan region</p>
 
 
-<h3>GA2: </h3>
+<h3>General Assembly 2: </h3>
 <p>Measures to prevent the spread of mosquito-borne diseases<br>
 	Measures to aid the transition to renewable energy in developing East Asian nations<br>
 Protecting the rights of non-combatant individuals in in the Yemeni Civil War<br>
 Measures to recover radiation contaminated zones</p>
 
 
-<h3>ENV:</h3>
+<h3>Environment Commission:</h3>
 <p>Preventing the acceleration of climate change<br>
 	Measures to restore environments damaged by man-made disasters in the Caribbean<br>
 Combating desertification in Sub-Saharan Africa<br>
 Sustainable urban planning in rapidly developing countries</p>
 
 
-<h3>ECOSOC:</h3>
+<h3>Economic and Social Council:</h3>
 <p>Addressing the issue of urban slums in South America
 <br>
 Improving infrastructure for technological growth in developing African economies
@@ -287,35 +287,35 @@ Addressing the economic crisis in Venezuela<br>
 Addressing the role of the internet in international crime</p>
 
 
-<h3>HRC:</h3>
+<h3>Human Rights Council:</h3>
 <p>Measures to protect the movement of refugees<br>
 Measures to combat international human trafficking<br>
 Addressing the issue of child labourers in Asia<br>
 Measures to rehabilitate internally displaced persons</p>
 
 
-<h3>SPC:</h3>
+<h3>Special Conference:</h3>
 <p>Measures to improve recognition of Kurdish minorities in the Middle East<br>
 Measures to facilitate peace discussion with remaining ISIS groups in Syria<br>
 Measures to reduce violence from drug cartels in Mexico<br>
 Preventing the distribution of counterfeit medicine</p>
 
 
-<h3>DIS:</h3>
+<h3>Disarmament Council:</h3>
 <p>preventing the militarization of outer space<br>
 Addressing the issue of biological weapons in warfare<br>
 Facilitating the aftermath of the Syrian civil war<br>
 Providing a resolution for the possibility of a nuclear crisis</p>
 
 
-<h3>SC:</h3>
+<h3>Security Council:</h3>
 <p>The regulation of international arms corporations<br>
 Facilitating communication and the peaceful resolution between Israel and Palestine<br>
 De-escalation of nuclear armament in the DPRK<br>
 Measures to reduce the armament of paramilitary forces in the Libyan Civil War</p>
 
 
-<h3>AP:</h3>
+<h3>Advisory Panel:</h3>
 <p>The question of humanitarian exemptions in sanction regimes<br>
 Rebuilding infrastructure in the aftermath of the Syrian conflict</p>
 	</div>
