Changed Student Officers tba on 2 Nov
Removed the annoying <<<<<HEAD as well

--- a/Conference.html
+++ b/Conference.html
@@ -470,7 +470,8 @@ I wish the delegates the best of luck, and look forward to assisting you through
             <h1 align="center">Student Officers</h1>
             <hr class="hrtitle">
 			<p class ="listOfOfficers" align="center"><br>
-				<span class="listOfOfficersTitle">General Assembly First Committee  [GA 1]</span><br>
+				<span class="listOfOfficersTitle">Student Officers will be announced on the 2nd of November 2018</span><br>
+				<!---
 				Ji (Hannah) Nan <br>
 				Evan Lu <br>
 				<br>
@@ -508,6 +509,7 @@ I wish the delegates the best of luck, and look forward to assisting you through
 				<span class="listOfOfficersTitle">Advisory Panel [AP]</span><br>
 				Julie Zhang <br>
 				Michelle Zhang<br>
+				--->
        </p>
         </div>
 
@@ -587,12 +589,6 @@ I wish the delegates the best of luck, and look forward to assisting you through
 			Dulwich College Beijing Class of 2013, Head Boy</em><br><br><br></h4>
 
         </div>
-<<<<<<< HEAD
-
-=======
-
-
->>>>>>> 9b3411e6bd042675f4bc5aa7cb7619b5a93f7d97
         <div class="mySlides2 w3-container">
         	<br><br><br>
         	<h1 align="center">Alumnus</h1>
