Changed links for pdf

--- a/Conference.html
+++ b/Conference.html
@@ -524,8 +524,8 @@ I wish the delegates the best of luck, and look forward to assisting you through
 				<table class="minimalistBlack2">
 				<tbody>
 				<tr>
-				<td align="center"><a target="_blank" href="https://github.com/dadimun/pdfs/blob/master/DIMUN%20Delegate%20Preparation%20Guide.pdf">Delegate Preparation Guide</a></td>
-				<td align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="pdfs/DIMUN How to write a resolution.pdf">How to write a resolution</a></td>
+				<td align="center"><a target="_blank" href="https://github.com/dadimun/pdfs/raw/master/DIMUN%20Delegate%20Preparation%20Guide.pdf">Delegate Preparation Guide</a></td>
+				<td align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/dadimun/pdfs/raw/master/DIMUN%20How%20to%20write%20a%20resolution.pdf">How to write a resolution</a></td>
 				</tr>
 				</tbody>
 				</table>
