--- a/Directors.html
+++ b/Directors.html
@@ -90,11 +90,11 @@
 		}
 		function FinalPamphlet()
 		{
-			window.open("pdfs/Director's Pamphlet FINAL.pdf")
+			window.open("https://github.com/dadimun/pdfs/raw/master/Director's%20Pamphlet%20FINAL.pdf")
 		}
 		function DirectorsGuide()
 		{
-			window.open("pdfs/DIMUNDirectors guide.pdf")
+			window.open("https://github.com/dadimun/pdfs/raw/master/DIMUNDirectors%20guide.pdf")
 		}
 	</script>
 
@@ -104,8 +104,8 @@
     <hr class="hrtitle">
     <br><br>
     	<center>
-			<img src="pdfs/Directors Pamphlet FINAL.jpg" width="10%" hspace="5%" style="border: 2px solid black;" onClick="FinalPamphlet();" class="imgbtn">
-			<img src="pdfs/DIMUNDirectors guide.jpg" width="10%" hspace="5%" style="border: 2px solid black;" onClick="DirectorsGuide();" class="imgbtn">
+			<img src="https://github.com/dadimun/pdfs/raw/master/Directors%20Pamphlet%20FINAL.jpg" width="10%" hspace="5%" style="border: 2px solid black;" onClick="FinalPamphlet();" class="imgbtn">
+			<img src="https://github.com/dadimun/pdfs/raw/master/DIMUNDirectors%20guide.jpg" width="10%" hspace="5%" style="border: 2px solid black;" onClick="DirectorsGuide();" class="imgbtn">
 		</center>
 
     <h4 align = "justify" class="DirectorsText">
