--- a/Press.html
+++ b/Press.html
@@ -25,8 +25,6 @@
 </head>
 <body data-target="#nino-navbar;" data-spy="scroll">
 
-	<!-- Header
-    ================================================== -->
 <header id="nino-header">
         
 
@@ -443,29 +441,29 @@
 		
 	function Issue1VIII()
 		{
-			window.open("pdfs/Press/VIII/DIMUNITE ISSUE 1.pdf")
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/VIII/DIMUNITE%20ISSUE%201.pdf")
 		}
 	function Issue2VIII()
 		{
-			window.open("pdfs/Press/VIII/DIMUNITE ISSUE 2.pdf")
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/VIII/DIMUNITE%20ISSUE%202.pdf")
 		}
 	function Issue3VIII()
 		{
-			window.open("pdfs/Press/VIII/DIMUNITE ISSUE 3.pdf")
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/VIII/DIMUNITE%20ISSUE%203.pdf")
 		}
 	function Issue1()
 		{
-			window.open("pdfs/Press/DIMUNITE issue 1 .pdf")
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/DIMUNITE%20issue%201%20.pdf")
 		}
 		
 	function Issue2()
 		{
-			window.open("pdfs/Press/DIMUNITE issue 2.pdf")
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/DIMUNITE%20issue%202.pdf")
 		}
 	
 	function Issue3()
 		{
-			window.open("pdfs/Press/DIMUNITE issue 3.pdf")
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/DIMUNITE%20issue%203.pdf")
 		}
 		
 	function comingSoon()
