--- a/Transport.html
+++ b/Transport.html
@@ -108,7 +108,7 @@
     			<span class="text" style="display: none;">Close map</span>
     		</h2>
     		<div class="mapWrap">
-	    	<iframe width="100%" height="600" src="https://maps.google.com/maps?width=100%&height=600&hl=en&coord=40.0395341,116.5672363&q=+(Dulwich%20College%20Beijing)&ie=UTF8&t=&z=16&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+	    	<div style="width: 100%"><div style="width: 100%"><iframe width="100%" height="600" src="https://cn.bing.com/maps/embed?h=600&w=100%&cp=40.031636522484455~116.52007808465574&lvl=16&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no"></iframe>
 	    	</div>
     	</div>
  
