--- a/Conference.html
+++ b/Conference.html
@@ -378,7 +378,7 @@ The Press Team will be producing three issues of DIMUNITE, an annual DIMUN magaz
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests,<br><br>
 
-It is my honor to serve you as the Head of Tech for DIMUN IX. DIMUN is a one of a kind as an event where young delegates have the opportunity to set their minds together and create so much more. Here, you are able to empower others with your enthusiasm, resourcefulness and passion.<br><br>
+It is my honor to serve you as the Head of Tech for DIMUN IX. DIMUN is a one of a kind as an event where young delegates have the opportunity to set their minds together and create so much <a href="http://cuboid.tech">more</a>. Here, you are able to empower others with your enthusiasm, resourcefulness and passion.<br><br>
 
 My deputy Jinho and I along with many more will maintain the DIMUN website and create a smooth experience during the conference to ensure your experience is as pleasant as possible. We look forward to meeting you soon. <br>
 																					</p>
@@ -532,7 +532,7 @@ I wish the delegates the best of luck, and look forward to assisting you through
      			<br><br>
      			Delegates:
 				<br><br>
-				Delegates must be in Years 7 – 9 (Grades 6 – 8), and no previous MUN experience is necessary. However, high-school students who wish to join DIMUN VIII are welcome to join the Advisory Panel; a new committee that has been opened specially for interested high-school students. At the conference, each committee will have one delegate per country.
+				Delegates must be in Years 7 – 9 (Grades 6 – 8), and no previous MUN experience is necessary. However, high-school students who wish to join DIMUN IX are welcome to join the Advisory Panel; a committee that has been opened specially for interested high-school students. At the conference, each committee will have one delegate per country.
 				<br><br>
 				Prior to the conference, delegates are required to research their assigned countries in order to represent them effectively in debate. They must also research their individual topics and prepare draft resolutions to be merged during lobbying. Delegates are also expected to be familiar with debate procedures, although committee Chairs will assist all delegates. Our Delegate Guide is available here and contains preparation and research guidelines, a sample resolution, the official DIMUN debate procedures and other relevant information.
      			<br><br>
