--- a/Conference.html
+++ b/Conference.html
@@ -378,7 +378,7 @@ The Press Team will be producing three issues of DIMUNITE, an annual DIMUN magaz
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests,<br><br>
 
-It is my honor to serve you as the Head of Tech for DIMUN IX. DIMUN is a one of a kind as an event where young delegates have the opportunity to set their minds together and create so much <a href="http://cuboid.tech">more</a>. Here, you are able to empower others with your enthusiasm, resourcefulness and passion.<br><br>
+It is my honor to serve you as the Head of Tech for DIMUN IX. DIMUN is a one of a kind as an event where young delegates have the opportunity to set their minds together and create so much more. Here, you are able to empower others with your enthusiasm, resourcefulness and passion.<br><br>
 
 My deputy Jinho and I along with many more will maintain the DIMUN website and create a smooth experience during the conference to ensure your experience is as pleasant as possible. We look forward to meeting you soon. <br>
 																					</p>
